# DaggerGpuMiner

./: .gitignore
GpuMiner/: CMakeLists.txt
GpuMiner/Core/: CMakeLists.txt  Common.h  Log.cpp  Log.h  Miner.h  MinerManager.cpp  MinerManager.h
GpuMiner/Hash/: CMakeLists.txt
GpuMiner/HashCL/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
GpuMiner/Utils/: CMakeLists.txt  PathUtils.cpp
GpuMiner/XDagCore/: CMakeLists.txt  XCpuMiner.cpp  XCpuMiner.h  XHash.cpp  XHash.h  XNetwork.cpp  XNetwork.h  XPool.cpp  XTaskProcessor.cpp  XTaskWrapper.cpp
GpuMiner/daggerminer/: CMakeLists.txt  main.cpp
